updating index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="./Style/style.css">
     <title>Simple Website</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="image">
-            <img src="../Images/myimage.jpg" alt="Java Programmer image">
+            <img src="./Images/myimage.jpg" alt="Java Programmer image">
         </section>
         <section class="about">
             <h2>About Me</h2>
@@ -34,11 +34,11 @@
     <footer class="skills">
         <h3>Skills</h3>
         <div class="logos">
-            <img src="../Images/html-css.jpg" alt="Html and Css logo">
-            <img src="../Images/java-programming-language.jpg" alt="Java logo">
-            <img src="../Images/javascript.png" alt="Javascript logo">
-            <img src="../Images/python.jpg" alt="Python logo">
-            <img src="../Images/mysql.jpg" alt="MySql logo">
+            <img src="./Images/html-css.jpg" alt="Html and Css logo">
+            <img src="./Images/java-programming-language.jpg" alt="Java logo">
+            <img src="./Images/javascript.png" alt="Javascript logo">
+            <img src="./Images/python.jpg" alt="Python logo">
+            <img src="./Images/mysql.jpg" alt="MySql logo">
         </div>
     </footer>
 </body>
